--- a/lang/example_program.txt
+++ b/lang/example_program.txt
@@ -1,14 +1,16 @@
 print 1;
-a = 10;
+a = 1;
 b = a + 1;
 print b;
+c = b + 2 - 1;
+print c;
 
 if (0)
 {
     print 0;
 }
 
-if (1)
+if (4)
 {
-    print 1;
+    print 4;
 }
