Made some chagnes, added glue

--- a/lang/CMakeLists.txt
+++ b/lang/CMakeLists.txt
@@ -23,10 +23,10 @@ if(COMPILE_ASM)
 	if(JS_ONLY)
 		message(STATUS "Setting compilation target to native JavaScript")
 		set(CMAKE_EXECUTABLE_SUFFIX ".js")
-		set_target_properties(lang PROPERTIES LINK_FLAGS "-s WASM=0 -s EXPORTED_FUNCTIONS='[_run_code_string]'")
+		set_target_properties(lang PROPERTIES LINK_FLAGS "-s WASM=0 -s EXPORTED_FUNCTIONS='[_run_code_string]' -s EXTRA_EXPORTED_RUNTIME_METHODS='[stringToUTF8, ccall]'")
 	else(JS_ONLY)
 		message(STATUS "Setting compilation target to WASM")
 		set(CMAKE_EXECUTABLE_SUFFIX ".wasm.js")
-		set_target_properties(lang PROPERTIES LINK_FLAGS "-s WASM=1 -s BINARYEN_METHOD='native-wasm' -s EXPORTED_FUNCTIONS='[_run_code_string]'")
+		set_target_properties(lang PROPERTIES LINK_FLAGS "-s WASM=1 -s BINARYEN_METHOD='native-wasm' -s EXPORTED_FUNCTIONS='[_run_code_string]'  -s EXTRA_EXPORTED_RUNTIME_METHODS='[stringToUTF8, ccall]'")
 	endif(JS_ONLY)
 endif(COMPILE_ASM)
